--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ html,body {
     margin:0;
     padding:0;
 }
+
 nav a {
   font-family: cursive;
   margin-right: 10px;
@@ -9,20 +10,19 @@ nav a {
 }
 
 nav .navbar-brand {
-  font-size: 25px;
+  font-size: 2.5rem;
 }
-
 
 /* START OF IMAGE-SECTION */
-#image-section {
+#about-section {
   background-image: url("https://i.postimg.cc/85vqNLhW/abstract.jpg");
   background-size: cover !important;
-  height: 450px;
+  height: 700px;
   position: relative;
   text-align: center;
-
 }
-#image-section:before{
+
+#about-section:before{
     content: '';
     position: absolute;
     top: 0;
@@ -31,19 +31,25 @@ nav .navbar-brand {
     bottom: 0;
     background: rgba(0,0,0,0.5);
 }
-#image-section .text {
+#about-section .text {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-#image-section .text h1 {
+
+#about-section .text h1 {
   color: #FFF !important;
+  font-size: 4rem;
   text-shadow: 1px 1px #000000;
   opacity: 1.0;
+  padding-bottom: 15px;
 }
-#image-section .text p {
+
+#about-section .text p {
   color: #FFF !important;
+  font-size: 1.5rem;
+  word-spacing: 1px;
   text-shadow: 1px 1px #000000;
   opacity: 1.0;
 }
@@ -54,10 +60,11 @@ nav .navbar-brand {
 #experience-section {
   background-image: url("https://i.postimg.cc/FFj26gFX/windows.jpg");
   background-size: cover !important;
-  height: 450px;
+  height: 550px;
   position: relative;
   text-align: center;
 }
+
 #experience-section:before{
     content: '';
     position: absolute;
@@ -67,17 +74,20 @@ nav .navbar-brand {
     bottom: 0;
     background: rgba(255,255,255,0.8);
 }
+
 #experience-section .text {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
 #experience-section .text h1 {
   color: #282828 !important;
   text-shadow: 1px 1px #FFF;
   opacity: 1.0;
 }
+
 #experience-section .text p {
   color: #282828 !important;
   text-shadow: 0.5px 0.5px #FFF;
@@ -86,8 +96,8 @@ nav .navbar-brand {
 /* END OF EXPERIENCE-SECTION */
 
 
-/* START OF PARTS-SECTION */
-#parts-section {
+/* START OF WORK-SECTION */
+#work-section {
   background-image: url("https://i.postimg.cc/QtzRr09j/shop.jpg");
   background-size: cover !important;
   padding-top: 100px;
@@ -95,9 +105,9 @@ nav .navbar-brand {
   width: 100%;
   position: relative;
   text-align: center;
-
 }
-#parts-section:before{
+
+#work-section:before{
     content: '';
     position: absolute;
     top: 0;
@@ -106,7 +116,8 @@ nav .navbar-brand {
     bottom: 0;
     background: rgba(0,0,0,0.5);
 }
-#parts-section .container .writing {
+
+#work-section .container .writing {
   padding-top: 50px;
   width: 100%;
   content: '';
@@ -117,50 +128,113 @@ nav .navbar-brand {
   bottom: 0;
   background: rgba(0,0,0,0.0);
 }
-#parts-section .container .writing h1 {
+
+#work-section .container .writing h1 {
   color: #FFF !important;
   text-shadow: 1px 1px #000000;
-
-
 }
-#parts-section .container .writing p {
+
+#work-section .container .writing p {
   color: #FFF !important;
   text-shadow: 1px 1px #000000;
   opacity: 1.0;
 }
-/* END OF PARTS-SECTION */
+/* END OF WORK-SECTION */
 
+/* START OF CALL-TO-ACTION-SECTION */
+#call-to-action-section {
+  background-image: url("https://i.postimg.cc/3NS665Sn/iphone.jpg");
+  background-size: cover !important;
+  height: 550px;
+  position: relative;
+  text-align: center;
+}
 
+#call-to-action-section:before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background: rgba(255,255,255,0.8);
+}
+
+#call-to-action-section .text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#call-to-action-section .text h1 {
+  color: #282828 !important;
+  text-shadow: 1px 1px #FFF;
+  opacity: 1.0;
+  margin-bottom: 19px;
+}
+
+#call-to-action-section .text h5 {
+  font-size: 12px;
+}
+
+#call-to-action-section .text p {
+  color: #282828 !important;
+  text-shadow: 0.5px 0.5px #FFF;
+  opacity: 1.0;
+  margin-bottom: 1px;
+}
+
+#call-to-action-section .text a {
+  margin-top: 0px;
+	color: #000000;
+  text-shadow: 1px 1px #7F8C8D;
+  padding: 0 0 8px 0;
+  font-size: 25px;
+  font-style: italic;
+}
+
+#call-to-action-section .text a:hover {
+	text-decoration:none;
+  font-weight: bold;
+  text-shadow: 1px 1px #000000;
+}
+
+/* END OF CALL-TO-ACTION-SECTION */
 
 /* START OF FOOTER */
-
 .full {
     width: 100%;
 }
+
 .gap {
 	height: 30px;
 	width: 100%;
 	clear: both;
 	display: block;
 }
+
 #footer {
 	background: #282828;
 	height: auto;
-	padding-bottom: 30px;
 	position: relative;
 	width: 100%;
 	border-bottom: 1px solid #CCCCCC;
 	border-top: 1px solid #DDDDDD;
 }
+
 #footer .container {
  margin-left: 20px;
 }
+
 #footer p {
 	margin: 0;
 }
+
 #footer img {
 	max-width: 100%;
 }
+
 #footer h3 {
 	color: white;
 	font-size: 18px;
@@ -173,7 +247,7 @@ nav .navbar-brand {
 
 #footer h4 {
 	color: white;
-	font-size: 2em;
+	font-size: 2rem;
 	font-weight: 600;
 	line-height: 38px;
 	padding: 40px 0 10px;
@@ -191,22 +265,23 @@ nav .navbar-brand {
   padding: 0 0 8px 0;
 }
 
-.email{
+#footer .container .row .contact-links .email{
   border-bottom: 3px solid #fff;
 }
+
 #footer ul li a {
 	padding: 0 0 12px 0;
 	display: block;
 }
+
 #footer a {
 	color: white;
   font-weight: lighter;
 }
 
 #footer p {
-	color: white;
+	color: #78828D;
   font-weight: lighter;
-  font-size:
 }
 
 #footer a:hover {
@@ -226,40 +301,103 @@ nav .navbar-brand {
 	box-shadow: 0 1px 0 #B4B3B3;
 }
 
-#footer a {
-	color: #78828D
-}
 
 .footer-bottom {
 	padding-top: 5px;
 	padding-bottom: 10px;
 }
 .footer-bottom p.copyright {
-	padding-top: 6px;
+	padding-top: 10px;
   font-size: 0.75em;
   text-align: center;
 }
 /* END OF FOOTER */
 
 
-/************** what to add in a media querie
-*******************/
-#footer .container .row #company-name{
-  /* visibility: collapse; */
+
+
+
+
+
+/*****************************
+START OF MEDIA QUERIES
+***************************/
+
+
+/* Smartphones (landscape) ----------- */
+@media only screen
+and (max-width: 709px) {
+/* Styles */
+
 }
-#footer .container .row #contact-links{
-  /* visibility: hidden; */
+
+
+/* Smartphones (portrait) ----------- */
+@media only screen
+and (max-width: 710px) {
+  #about-section {
+    /* background-color: red!important; */
+    height: 500px;
+    margin-bottom: 0px;
+  }
+  #about-section .text h1 {
+    font-size: 2rem;
+    padding-bottom: 0px;
+  }
+  #about-section .text p {
+    color: #FFF !important;
+    font-size: 15px;
+    word-spacing: 0.5px;
+    text-shadow: 1px 1px #000000;
+    opacity: 1.0;
+  }
+
+  #call-to-action-section {
+    /* background-color: red!important; */
+    height: 500px;
+    margin-bottom: 0px;
+  }
+  #call-to-action-section .text h1 {
+    font-size: 2rem;
+    padding-bottom: 0px;
+  }
+  #call-to-action-section .text p {
+    font-size: 15px;
+    word-spacing: 0.5px;
+  }
+  #call-to-action-section .text a {
+    font-size: 20px;
+  }
+
+
+  #footer .container-fluid .row div{
+   /* background-color: red; */
+   text-align: center !important;
+  }
+
+  #footer .container-fluid .row .bottom-links ul li h5 {
+    /* padding-bottom: 30px; */
+
+  }
 }
-#footer .container .row #bottom-links{
-  /* visibility: hidden; */
+
+
+
+/* Desktops and laptops ----------- */
+@media only screen
+and (min-width: 1224px) {
+/* Styles */
 }
-/**/
 
-@media (max-width: @screen-xs-max) {
-  /* #parts-section {
+/* Large screens ----------- */
+@media only screen
+and (min-width: 1824px) {
+/* Styles */
+}
 
-    height: 900rem;
-
-  } */
-
+/* iPhone 4 ----------- */
+@media
+only screen and (-webkit-min-device-pixel-ratio : 1.5),
+only screen and (min-device-pixel-ratio : 1.5) {
+/* Styles */
 }
