added gallery model for project images

--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,6 @@ html,.top-menu {
     padding:0;
 }
 
-
-
 nav a {
   font-family: 'Kulim Park', sans-serif;
   margin-right: 10px;
@@ -15,6 +13,9 @@ nav .navbar-brand {
   font-size: 2.5rem;
   font-family: cursive;
 }
+
+
+
 
 /* START OF IMAGE-SECTION */
 #about-section {
@@ -66,6 +67,11 @@ nav .navbar-brand {
 
 }
 /* END OF IMAGE-SECTION */
+
+
+
+
+
 
 
 /* START OF EXPERIENCE-SECTION */
@@ -153,6 +159,11 @@ box-shadow: 7px 6px 22px -2px rgba(0,0,0,0.28);
 /* END OF EXPERIENCE-SECTION */
 
 
+
+
+
+
+
 /* START OF WORK-SECTION */
 #work-section {
   background-image: url("https://i.postimg.cc/QtzRr09j/shop.jpg");
@@ -162,28 +173,19 @@ box-shadow: 7px 6px 22px -2px rgba(0,0,0,0.28);
   width: 100%;
   position: relative;
   text-align: center;
+  height: auto;
 }
 
 #work-section:before{
     content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    background: rgba(0,0,0,0.5);
+    background: rgba(0,0,0,0.3);
 }
 
 #work-section .container .writing {
-  padding-top: 50px;
   font-family: 'Ibarra Real Nova', serif;
   width: 100%;
+  height: 50px;
   content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
   background: rgba(0,0,0,0.0);
 }
 
@@ -197,7 +199,11 @@ box-shadow: 7px 6px 22px -2px rgba(0,0,0,0.28);
   text-shadow: 1px 1px #000000;
   opacity: 1.0;
 }
+
 /* END OF WORK-SECTION */
+
+
+
 
 /* START OF CALL-TO-ACTION-SECTION */
 #call-to-action-section {
@@ -441,6 +447,7 @@ and (max-width: 710px) {
 
   }
 }
+
 
 
 
